--- a/css/components/vanishing-inputs.css
+++ b/css/components/vanishing-inputs.css
@@ -18,13 +18,15 @@
     height: 100px;
     padding: 12px;
     border: none;
-    background-color: transparent;
+    background-color: transparent !important;
     color: white;
     font-size: 14px;
     font-family: 'Montserrat', sans-serif;
     z-index: 2;
     position: relative;
     resize: none;
+    box-sizing: border-box;
+    display: block;
 }
 
 .vanishing-input-container textarea:focus {
